added show products

--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
   <main class="ms-auto"
   style="width: 80%;">
     <section class="row">
+
+      <!-- SIDE BUTTON  -->
+      <!-- SIDE BUTTON  -->
+
         <nav class="col-lg-2 justify-self-right">
           <div class="btn-group-vertical">
             <button id="mensClotingButton" class="bg-dark text-light w-100 fs-5 my-1 py-1 text-nowrap">men's clothing</button>
@@ -69,7 +73,12 @@
             <button id="womensClothingButton" class="bg-dark text-light w-100 fs-5 my-1 py-1 text-nowrap">women's clothing</button>
           </div>
         </nav>
-        <section class="col-lg-8">
+
+        <!-- CAROUSEL AREA  -->
+        <!-- CAROUSEL AREA  -->
+
+        <section class="col-lg-8"
+        style="height: 519px;">
           <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div id="carouselInnerItems" class="carousel-inner">
  
@@ -84,8 +93,19 @@
             </button>
           </div>
         </section>
+
+        <!-- START DISPLAY ALL PRODUCTS -->
+        <!-- START DISPLAY ALL PRODUCTS -->
+
+        
     </section>
   </main>
+  <section class="m-auto"
+  style="width: 80%;">
+    <div id="displayProductsDiv">
+
+    </div>
+  </section>
 
   <script src="JS/app.js"></script>
 
