--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <!-- CSS LINK  -->
 
   <link rel="stylesheet" href="/CSS/style.css">
+  <link rel="stylesheet" href="/CSS/responsib.css">
 
   <!-- FONT AWESOME LINK  -->
   <!-- FONT AWESOME LINK  -->
